# backupandrestore

./: .gitignore  .gitmodules  Jenkinsfile  Jenkinsfile.cbos.update  Jenkinsfile.intchart.setup  Jenkinsfile.nightly  Jenkinsfile.nightly.nose  Jenkinsfile.osmn.performance  Jenkinsfile.osmn.robustness  Jenkinsfile.performance  Jenkinsfile.pra  Jenkinsfile.robustness  Jenkinsfile.s3  Jenkinsfile.weekly.nsrecreation  Jenkinsfile.yang.model  Jenkinsfile_agent_appender.pra  common-properties.yaml  fixlogs.py  fossa-config-bro-agent-api.yml  fossa-config-bro.yml  fossa-config-eric-log4j2-socket-appender.yml  gen_char_report.py  install-athena-prereqs.sh  lazy-fossa  lazy-fossa.md  primary_update.py  sonar-report-builder.jq  update-marketplace-release-upload-config.sh
bro-agent-api/src/: BUILD.bazel  WORKSPACE
bro-agent-api/src/bazel/: BUILD.bazel  adp_bro_protos_BUILD.bazel  boost-test.bzl  boost_BUILD.bazel  external_includes.bzl  google-test.bzl  googletest_BUILD.bazel  grpc_deps.patch  patch_generated_python.bzl  patch_generated_python.sh  protobuf.patch  python_rules.patch  version.bzl
bro-agent-api/src/main/cpp/: .bazelrc  BUILD.bazel
bro-agent-api/src/main/cpp/agent/: Agent.cc  Agent.hh  AgentBehavior.hh  AgentFactory.cc  AgentFactory.hh  BackupExecutionActions.cc  BackupExecutionActions.hh  OrchestratorControlMessageHandler.cc  OrchestratorControlMessageHandler.hh  OrchestratorGrpcChannel.cc  OrchestratorGrpcChannel.hh  RestoreExecutionActions.cc  RestoreExecutionActions.hh
bro-agent-api/src/main/cpp/exception/: FailedToDownloadException.hh  FailedToTransferBackupException.hh
bro-agent-api/src/main/cpp/fragment/: BackupFragmentInformation.cc  BackupFragmentInformation.hh  FragmentInformation.cc  FragmentInformation.hh
bro-agent-api/src/main/cpp/registration/: RegistrationInformation.cc  RegistrationInformation.hh  SoftwareVersion.cc  SoftwareVersion.hh
bro-agent-api/src/main/cpp/service/: BackupService.cc  BackupService.hh  RestoreService.cc  RestoreService.hh
bro-agent-api/src/main/cpp/util/: ChecksumCalculator.cc  ChecksumCalculator.hh  FileChunkServiceUtil.hh  FileStream.cc  FileStream.hh
bro-agent-api/src/main/java/com/ericsson/adp/mgmt/bro/api/agent/: ActionInformation.java  Agent.java  AgentBehavior.java  AgentFactory.java  AgentState.java  BackupActions.java  BackupExecutionActions.java  BackupExecutionState.java  BackupPreparationActions.java  BackupPreparationState.java  BackupState.java  CancelActionState.java  CancelActions.java  CertWatcher.java  CertificateHandler.java  FinishedActionState.java  GrpcApiVersion.java  OrchestratorConnectionInformation.java  OrchestratorGrpcChannel.java  OrchestratorStreamObserver.java  PostBackupActions.java  PostBackupState.java  PostRestoreActions.java  RestoreActions.java  RestoreExecutionActions.java  RestoreExecutionState.java  RestoreInformation.java  RestorePostActionState.java  RestorePreparationActions.java  RestorePreparationState.java  RestoreState.java  WaitingForActionState.java
bro-agent-api/src/main/java/com/ericsson/adp/mgmt/bro/api/exception/: FailedToDownloadException.java  FailedToTransferBackupException.java  InvalidSoftwareVersionException.java  (+3 more)
bro-agent-api/src/main/proto/: Action.proto  AgentControl.proto  AgentFeature.proto  CancelBackupRestore.proto  CheckpointInformation.proto  Fragment.proto  INT_BR_ORCH_CTRL.proto  INT_BR_ORCH_DATA.proto  OrchestratorControl.proto  SoftwareVersionInfo.proto
bro-agent-api/src/main/python/: BUILD.bazel  README.md
bro-agent-api/src/main/python/bro_agent/: __init__.py
bro-agent-api/src/main/python/bro_agent/agent/: ActionInformation.py  Agent.py  AgentBehavior.py  AgentFactory.py  AgentState.py  BackupExecutionActions.py  BackupExecutionState.py  CancelActionState.py  CancelActions.py  FinishedActionState.py  OrchestratorConnectionInformation.py  OrchestratorGrpcChannel.py  PostRestoreActions.py  RestoreActions.py  RestoreExecutionActions.py  RestoreExecutionState.py  RestoreInformation.py  RestorePostActionState.py  RestorePreparationActions.py  RestorePreparationState.py  RestoreState.py  WaitingForActionState.py  states.py
bro-agent-api/src/main/python/bro_agent/exception/: Exceptions.py
bro-agent-api/src/main/python/bro_agent/filetransfer/: FileChunkServiceUtil.py
bro-agent-api/src/main/python/bro_agent/fragment/: BackupFragmentInformation.py  FragmentInformation.py
bro-agent-api/src/main/python/bro_agent/grpc/: BackupFileMessageBuilder.py  BackupMessageBuilder.py  CustomMetadataFileMessageBuilder.py
bro-agent-api/src/main/python/bro_agent/registration/: RegistrationInformation.py  SoftwareVersion.py
bro-agent-api/src/main/python/bro_agent/service/: BackupService.py  RestoreService.py
bro-agent-api/src/main/python/bro_agent/util/: ChecksumCalculator.py
bro-agent-api/src/main/resources/: log4j2.properties
bro-agent-api/src/test/cpp/: BUILD.bazel
bro-agent-api/src/test/cpp/agent/: TestAgentFactory.cc  TestOrchestratorControlMessageHandler.cc  TestOrchestratorGrpcChannel.cc
bro-agent-api/src/test/cpp/fragment/: TestBackupFragmentInformation.cc  TestFragmentInformation.cc
bro-agent-api/src/test/cpp/service/: TestBackupService.cc  TestRestoreService.cc
bro-agent-api/src/test/cpp/util/: TestFileChunkServiceUtil.cc
bro-agent-api/src/test/python/: BUILD.bazel  RegistrationInformationUtil.py  TestAgent.py  TestAgentBehavior.py  TestAgentFactory.py  TestBackupExecutionActions.py  TestBackupFileMessageBuilder.py  TestBackupFragmentInformation.py  TestBackupService.py  TestCancelAction.py  TestCancelActionState.py  TestChecksumCalculator.py  TestCustomMetadataFileMessageBuilder.py  TestFileChunkServiceUtil.py  TestFinishedActionState.py  TestFragmentInformation.py  TestOrchestratorConnectionInformation.py  TestOrchestratorGrpcChannel.py  TestRegistrationInformation.py  TestRestoreActions.py  TestRestoreExecutionState.py  TestRestorePostActionState.py  TestRestorePreparationState.py  TestRestoreService.py  TestWaitingForActionState.py  pytest_runner.bzl
bro-agent-api/src/test/resources/: backup.txt  genTestCerts.sh  openssl.conf
(+1111 files in other folders)
