load("@com_github_grpc_grpc//bazel:grpc_build_system.bzl", "grpc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_proto_library", "py_grpc_library")

proto_library(
    name = "adp-bro-protos",
    srcs = [
        "Action.proto",
        "AgentControl.proto",
        "CancelBackupRestore.proto",
        "Fragment.proto",
        "INT_BR_ORCH_CTRL.proto",
        "INT_BR_ORCH_DATA.proto",
        "OrchestratorControl.proto",
        "SoftwareVersionInfo.proto",
        "CheckpointInformation.proto",
        "AgentFeature.proto"
    ],
    deps = ["@com_google_protobuf//:empty_proto"],
    visibility = ["//visibility:public"],
)
cc_proto_library(
    name = "adp_bro_cc_proto",
    deps = [
        ":adp-bro-protos",
    ],
)

cc_grpc_library(
    name = "adp_bro_cc_grpc",
    srcs = [":adp-bro-protos"],
    grpc_only = True,
    generate_mocks = True,
    well_known_protos = True,
    deps = [":adp_bro_cc_proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "adp_bro_py_proto",
    deps = [
        ":adp-bro-protos",
    ],
    out_path = "external/adp_bro",
    visibility = ["//visibility:public"],
)

py_grpc_library(
    name = "adp_bro_grpc_proto",
    srcs = ["@adp_bro//:adp-bro-protos"],
    deps = [
        "//:adp_bro_py_proto",
    ],
    out_path = "external/adp_bro",
    visibility = ["//visibility:public"],
)
