cc_library(
    name = "bro-agent-api",
    srcs = [
        "agent/Agent.cc",
        "agent/Agent.hh",
        "agent/AgentBehavior.hh",
        "agent/AgentFactory.cc",
        "agent/AgentFactory.hh",
        "agent/BackupExecutionActions.cc",
        "agent/BackupExecutionActions.hh",
        "agent/OrchestratorControlMessageHandler.cc",
        "agent/OrchestratorControlMessageHandler.hh",
        "agent/OrchestratorGrpcChannel.cc",
        "agent/OrchestratorGrpcChannel.hh",
        "agent/RestoreExecutionActions.cc",
        "agent/RestoreExecutionActions.hh",
        "exception/FailedToDownloadException.hh",
        "exception/FailedToTransferBackupException.hh",
        "fragment/BackupFragmentInformation.cc",
        "fragment/BackupFragmentInformation.hh",
        "fragment/FragmentInformation.cc",
        "fragment/FragmentInformation.hh",
        "registration/RegistrationInformation.cc",
        "registration/RegistrationInformation.hh",
        "registration/SoftwareVersion.cc",
        "registration/SoftwareVersion.hh",
        "service/BackupService.cc",
        "service/BackupService.hh",
        "service/RestoreService.cc",
        "service/RestoreService.hh",
        "util/ChecksumCalculator.cc",
        "util/ChecksumCalculator.hh",
        "util/FileChunkServiceUtil.hh",
        "util/FileStream.cc",
        "util/FileStream.hh",
    ],
    hdrs = [
        "agent/Agent.hh",
        "agent/AgentBehavior.hh",
        "agent/AgentFactory.hh",
        "agent/BackupExecutionActions.hh",
        "agent/OrchestratorControlMessageHandler.hh",
        "agent/OrchestratorGrpcChannel.hh",
        "agent/RestoreExecutionActions.hh",
        "exception/FailedToDownloadException.hh",
        "exception/FailedToTransferBackupException.hh",
        "fragment/BackupFragmentInformation.hh",
        "fragment/FragmentInformation.hh",
        "registration/RegistrationInformation.hh",
        "registration/SoftwareVersion.hh",
        "service/BackupService.cc",
        "service/BackupService.hh",
        "service/RestoreService.hh",
        "util/ChecksumCalculator.hh",
        "util/FileChunkServiceUtil.hh",
        "util/FileStream.hh",
    ],
    includes = [ "." ],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "@3pp-bro-boost//:boost-lib",
        "@adp_bro//:adp_bro_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
